got the questions/options/timer to work, but cant get click to equal correct answer

--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
 body{
     background-color: lightslategray;
+    
 };
 
-#container{                                
+
+/* timer/score box */
+nav{
+    height: 100px;
+};
+
+
+/* options section */
+#options{
+    margin-left: 10px;
+};
+
+/* main container */
+#container{                               
     margin-left: 25%;
     background-color: lightsteelblue;
 };
-
-
-element.style{
-    width: fit-content;
-}
+/* question container */
 #quest-container{
-    width: fit-content;
+    width: 100%;
     background-color: lightyellow;
-}
-button{
-    margin-left: 200px;
+    height: 400px;
+    
 }
